{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 178,
  "lineage": "31bb16d4-c29d-7fcf-12a3-f19c5cb5de29",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instancen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:949609334280:instance/i-0698072722702a239",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0698072722702a239",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00d4350e3ac841bcf",
            "private_dns": "ip-10-0-1-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.201",
            "public_ip": "44.220.177.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ce3449fe9ff937a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-08a56142958bed574"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0732910aa597d67a8",
            "tags": {
              "Name": "task1-instance"
            },
            "tags_all": {
              "Name": "task1-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "web_instance"
            },
            "vpc_security_group_ids": [
              "sg-08a56142958bed574"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.subnetn",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:internet-gateway/igw-0c2ea55971110879f",
            "id": "igw-0c2ea55971110879f",
            "owner_id": "949609334280",
            "tags": {
              "Name": "task-igw"
            },
            "tags_all": {
              "Name": "task-igw"
            },
            "vpc_id": "vpc-03566aa4aa0ecd0a9"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtablen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:route-table/rtb-0d6655758bc58ec26",
            "id": "rtb-0d6655758bc58ec26",
            "owner_id": "949609334280",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c2ea55971110879f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "task1-route-table"
            },
            "tags_all": {
              "Name": "task1-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03566aa4aa0ecd0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwn",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f86b9c747f8d694",
            "route_table_id": "rtb-0d6655758bc58ec26",
            "subnet_id": "subnet-0732910aa597d67a8"
          },
          "dependencies": [
            "aws_internet_gateway.igwn",
            "aws_route_table.rtablen",
            "aws_subnet.subnetn",
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:security-group/sg-08a56142958bed574",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a56142958bed574",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240328205835098800000001",
            "name_prefix": "terraform-",
            "owner_id": "949609334280",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-03566aa4aa0ecd0a9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:subnet/subnet-0732910aa597d67a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0732910aa597d67a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949609334280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-subnet"
            },
            "tags_all": {
              "Name": "task-subnet"
            },
            "vpc_id": "vpc-03566aa4aa0ecd0a9"
          },
          "dependencies": [
            "aws_vpc.vpctest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctest",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:949609334280:vpc/vpc-03566aa4aa0ecd0a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0573d0bc800d75083",
            "default_route_table_id": "rtb-026981946626f290e",
            "default_security_group_id": "sg-005cb901ee93b6be6",
            "dhcp_options_id": "dopt-0f8d5ff57028202c7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03566aa4aa0ecd0a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026981946626f290e",
            "owner_id": "949609334280",
            "tags": {
              "Name": "task"
            },
            "tags_all": {
              "Name": "task"
            }
          }
        }
      ]
    }
  ]
}